Fixed spacing of sidebar content.

--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,22 @@ html, body {
 .sidebar {
     background-color: rgb(0, 195, 255);
     grid-area: 1 / 1 / 3 / 2;
+    display: grid;
+    grid-template-rows: 1fr 9fr;
 }
 
 .main {
     background-color: rgb(214, 214, 214);
+}
+
+.branding {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    border: 1px solid black;
+}
+
+.nav {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    border: 1px solid black;
 }
